# FGBench

./: .gitignore  README.md  build_dataset.py  build_qa.py  pyproject.toml  requirements.txt
AccFG_private/: run_data.py
AccFG_private/accfg/: main.py
data/molnet/: bace.csv  bace_compare.csv  bbbp.csv  bbbp_compare.csv  bbbp_compare_info.csv  clintox.csv  clintox_compare.csv  clintox_compare_info.csv  esol.csv  esol_compare.csv  esol_compare_info.csv  freesolv.csv  freesolv_compare.csv  freesolv_compare_info.csv  hiv.csv  lipo.csv  lipo_compare.csv  lipo_compare_info.csv  qm9_compare.csv  qm9_similar_pairs.csv  sider.csv  sider_compare.csv  tox21.csv  tox21_compare.csv
fgbench/: build_dataset.py  build_qa.py  split_qa.py
fgbench/prompts/: __init__.py  instruction.py  question.py
